# nginx-aws-lambda

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: aws_lambda.h
ngx-module/: config  lambda_wrapper.cpp  ngx_http_hello_world_module.c
src/: aws_lambda.cpp
test/: nginx.conf  run.sh
